style(articles): adjust style and fix display bug of menu in dark mode

--- a/src/styles/custom.ant.scss
+++ b/src/styles/custom.ant.scss
@@ -48,6 +48,10 @@
     visibility: hidden;
 }
 
+.ant-menu-light {
+    background: transparent;
+}
+
 .search-modal .ant-modal-content {
     padding: 0px 12px 12px 12px;
 }
