--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -137,7 +137,6 @@ code {
 
 .navbar .menu {
     font-weight: 500;
-    background: transparent;
     border: 0;
 }
 
